pkg/cmd/ingress/testdata/tls/expected/namespaces/myapps/modify-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: modify-ingress
  namespace: myapps
spec:
  rules:
  - host: godemo48.my.domain.com
    http:
      paths:
      - backend:
          service:
            name: godemo48
            port:
              number: 80
        pathType: null
  tls:
  - hosts:
    - godemo48.my.domain.com
status:
  loadBalancer: {}
