pkg/cmd/ingress/testdata/tls/expected/namespaces/myapps/modify-old-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: modify-old-ingress
  namespace: myapps
spec:
  rules:
  - host: godemo48.my.domain.com
    http:
      paths:
      - backend: {}
        pathType: null
  tls:
  - hosts:
    - godemo48.my.domain.com
status:
  loadBalancer: {}
